--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
+    "jwt-decode": "^4.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "zod": "^4.1.12"
