--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
-    "react": "^19.1.1",
-    "react-calendar": "^6.0.0",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
+    "react": "^19.1.1",
+    "react-big-calendar": "^1.19.4",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "zod": "^4.1.12"
