--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "calender": "^1.0.3",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
-    "react": "^19.1.1",
+    "react": "^19.2.0",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
