--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "bson": "^7.0.0",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
