--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
     "bootstrap": "^5.3.8",
     "bson": "^7.0.0",
     "date-fns": "^4.1.0",
